# structured-contained-sindy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  complete_repository_setup.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: conf.py  index.rst
docs/api/: index.md
docs/theory/: sindy_overview.md  structure_constraints.md
docs/tutorials/: custom_systems.md  getting_started.md  real_world_data.md  training_networks.md
examples/notebooks/: 01_quickstart.ipynb  02_basic_comparison.ipynb  03_threshold_ablation.ipynb  04_lorenz_system.ipynb  05_lynx_hare.ipynb
examples/scripts/: discover_equations.py  run_benchmark.py  train_network.py
models/: README.md
src/sc_sindy/: __init__.py
src/sc_sindy/core/: __init__.py  library.py  sindy.py  structure_constrained.py
src/sc_sindy/derivatives/: __init__.py  finite_difference.py  spline.py
src/sc_sindy/metrics/: __init__.py  coefficient.py  reconstruction.py  structure.py
src/sc_sindy/network/: __init__.py  feature_extraction.py  structure_network.py  training.py
src/sc_sindy/systems/: __init__.py  base.py  biological.py  chaotic.py  oscillators.py  registry.py
src/sc_sindy/utils/: __init__.py  equations.py  io.py  visualization.py
tests/: __init__.py  conftest.py
tests/benchmarks/: __init__.py  benchmark_accuracy.py  benchmark_speed.py
tests/integration/: __init__.py  test_ablation.py  test_full_pipeline.py  test_real_world.py
tests/unit/: __init__.py  test_library.py  test_sindy.py  test_structure_constrained.py  test_systems.py
