[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sc-sindy"
version = "0.1.0"
description = "Structure-Constrained SINDy for equation discovery with learned structural priors"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Structure-Constrained SINDy Project"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["sindy", "equation discovery", "dynamical systems", "sparse regression", "neural networks"]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
pysindy = ["pysindy>=2.0"]
viz = ["matplotlib>=3.5", "seaborn>=0.12"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=1.0",
]
all = ["sc-sindy[torch,pysindy,viz,dev,docs]"]

[project.urls]
Homepage = "https://github.com/yourusername/structure-constrained-sindy"
Documentation = "https://structure-constrained-sindy.readthedocs.io"
Repository = "https://github.com/yourusername/structure-constrained-sindy"
Issues = "https://github.com/yourusername/structure-constrained-sindy/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=sc_sindy --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
